<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <ImageView
                android:id="@+id/imgSohil"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/sohil_pic"
                android:contentDescription="@string/sohil_image" />

            <ImageView
                android:id="@+id/imgSafiya"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:background="@mipmap/safiya_pic"
                android:contentDescription="@string/safiya_image" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtSohil"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/sohil"
                android:textColor="#052149"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txtSafiya"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/safiya"
                android:textColor="#052149"
                android:textSize="25sp" />
        </TableRow>
    </TableLayout>
</RelativeLayout>