<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/txt_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/header"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_header"
        android:layout_margin="30sp"
        android:background="@drawable/edt_background"
        android:fontFamily="cursive"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:padding="20sp"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_password"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="22dp"
        android:background="@drawable/btn_background"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginLeft="30sp"
        android:layout_marginRight="30sp"
        android:layout_marginTop="22dp"
        android:background="@drawable/btn_background"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/forgot"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>