<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:id="@+id/scv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_set_student_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_header"
                android:layout_marginTop="10sp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/student_name"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/txt_set_pass_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_set_student_name"
                android:layout_marginTop="5sp"
                android:background="@drawable/line" />

            <TextView
                android:id="@+id/txt_set_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_set_pass_line"
                android:layout_marginTop="10sp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/set_pass"
                android:textColor="#000000"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_set_pass"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="30sp"
                android:background="@drawable/edt_background"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:padding="20sp"
                android:textColor="#000000"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edt_background"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/password_confirm"
                android:inputType="numberPassword"
                android:padding="20sp"
                android:textColor="#000000"
                android:textSize="25sp" />

            <Spinner
                android:id="@+id/sp_question_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_confirm_password"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/sp_background"
                android:entries="@array/ques1"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/password_confirm"
                android:inputType="numberPassword"
                android:padding="20sp"
                android:textColor="#000000"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/edt_answer_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sp_question_one"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edt_background"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/answer1"
                android:padding="20sp"
                android:textColor="#000000"
                android:textSize="25sp" />


            <Spinner
                android:id="@+id/sp_question_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_answer_one"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/sp_background"
                android:entries="@array/ques2"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/answer1"
                android:inputType="numberPassword"
                android:padding="20sp"
                android:textColor="#000000"
                android:textSize="25sp" />


            <EditText
                android:id="@+id/edt_answer_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sp_question_two"
                android:layout_marginLeft="30sp"
                android:layout_marginRight="30sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edt_background"
                android:fontFamily="cursive"
                android:gravity="center"
                android:hint="@string/answer2"
                android:padding="20sp"
                android:textColor="#000000"
                android:textSize="25sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_answer_two"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:layout_marginTop="22dp"
                    android:background="@drawable/btn_background"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/done"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="30sp"
                    android:layout_marginRight="30sp"
                    android:layout_marginStart="35dp"
                    android:layout_toEndOf="@+id/btn_done"
                    android:background="@drawable/btn_background"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/reset"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>